   files. Thanks to Thomas Grombacher at the Merck Group for the report.

DEPRECATED AND DEFUNCT:

 o Removed previously defunct apply() for SampleAnnotationFile.

 o Default method whatDataType() is now defunct.
 
 o Argument '.old' of getChipType() for AromaMicroarrayTabularBinaryFile is
   now defunct (was deprecated in 2008!).
   

Version: 3.0.0 [2016-01-05]

SIGNIFICANT CHANGES:

 o Package requires R (>= 3.1.2) and BioC (>= 3.0) both released in
   October 2014.

PERFORMANCE:

 o SPEED: Segmentation methods (e.g. CbsModel) now uses futures, which
   means that samples can now be segmented in parallel/distributed.

SOFTWARE QUALITY:

 o ROBUSTNESS: Using do.call(fcn) internally instead of do.call("fcn").
 
 o ROBUSTNESS: Using getPathname() instead of accessing private field.

BUG FIXES:

 o getOutputDataSet(..., onMissing="dropall") for AromaTransform would throw
   error on no applicable method getFullNames() for NULL.

DEPRECATED AND DEFUNCT:

 o CLEANUP: Defunct apply() for SampleAnnotationFile; use applyTo().

 o CLEANUP: Drop defunct methods.


Version: 2.14.0 [2015-10-20]
o ROBUSTNESS: Explicitly importing core R functions.
o CLEANUP: Renamed apply() for SampleAnnotationFile to applyTo().
o CLEANUP: One rowMads(..., centers) to rowMads(..., center).
o CLEANUP: Drop prototype code never used.
o CLEANUP: Deprecated internal whatDataType() method.
o CLEANUP: Defuncted previously deprecated methods: nbrOfArrays() for
  readData() for AromaMicroarrayDataSetTuple, AromaMicroarrayDataSet and
  AromaUnitTotalCnBinarySet, as well as readData() for SampleAnnotationFile.
o CLEANUP: Removed previously (Feb 2014) defunct method patchPackage()
  and patch().
o BUG FIX: writeRegions(..., format="wig") gave an error.


Version: 2.13.1 [2015-05-25]
o Package now requires R (>= 3.1.1) released July 2014. This allows us
  to use BioC (>= 3.0) (October 2014).
o Relaxed sanity checks; now it's possible to allocate Aroma tabular