@@ -18,9 +18,8 @@
 }
 
 \usage{
-\method{fit}{CopyNumberSegmentationModel}(this, arrays=NULL, chromosomes=getChromosomes(this),
-  maxNAFraction=getMaxNAFraction(this), force=FALSE, ..., .retResults=FALSE,
-  verbose=FALSE)
+\method{fit}{CopyNumberSegmentationModel}(this, arrays=NULL, chromosomes=getChromosomes(this), force=FALSE, ...,
+  .retResults=FALSE, verbose=FALSE)
 }
 
 \arguments{
